[package]
name = "envio"
version = "0.6.1"
rust-version = "1.75.0"
description = "A Modern And Secure CLI Tool For Managing Environment Variables"
edition = "2021"
authors = ["Humble Penguin <humblepenguinn@gmail.com>"]
repository = "https://github.com/humblepenguinn/envio/"
license = "MIT/Apache-2.0"
readme = "README.md"


[lib]
name = "envio"
path = "src/lib.rs"
doctest = false

[dependencies]
age = "0.9.1"
bincode = "1.3.3"
chrono = { version = "0.4.33", features = ["serde"] }
clap = { version = "4.3.24", features = ["derive"] }
colored = "2.0.0"
comfy-table = "6.1.4"
dirs = "5.0.0"
indicatif = "0.17.3"
inquire = { version = "0.7.0", features = ["date"] }
semver = "1.0.17"
serde = { version = "1.0.159", features = ["derive"] }
typetag = "0.2"
regex = "1.7"
tokio = "1.28.0"
url = "2.3.1"
thiserror = "1.0.58"
color-eyre = "0.6.3"

[target.'cfg(unix)'.dependencies]
gpgme = "0.11"

[dependencies.reqwest]
version = "0.11.16"
default-features = false
features = ["rustls-tls-native-roots"]

[build-dependencies]
chrono = "0.4.33"
clap = { version = "4.1.8", features = ["derive"] }
clap_mangen = "0.2.9"
clap_complete = "4.5.1"

[profile.release]
lto = true