[package]
name = "envio"
version = "0.6.1"
rust-version = "1.75.0"
edition = "2021"
description = "A Modern And Secure CLI Tool For Managing Environment Variables"
authors = ["Humble Penguin <humblepenguinn@gmail.com>"]
repository = "https://github.com/humblepenguinn/envio/"
license = "MIT/Apache-2.0"
readme = "README.md"
build = "build/build.rs"

[features]
# disable the application feature when using envio as a library
default = ["application"]
application = [
    "better-panic",
    "clap",
    "colored",
    "comfy-table",
    "dirs",
    "git-version",
    "indicatif",
    "inquire",
    "ratatui",
    "regex",
    "semver",
    "shell-escape",
    "sysinfo",
    "tokio",
    "typetag",
    "url",
    "reqwest",
]

[lib]
name = "envio"
path = "src/lib.rs"
doctest = false

[dependencies]
age = "0.9.1"
bincode = "1.3.3"
chrono = { version = "0.4.33", features = ["serde"] }
clap = { version = "4.3.24", features = ["derive"], optional = true }
colored = { version = "2.0.0", optional = true }
comfy-table = { version = "6.1.4", optional = true }
dirs = { version = "5.0.0", optional = true }
dyn-clone = "1.0.20"
git-version = { version = "0.3.9", optional = true }
indicatif = { version = "0.17.3", optional = true }
inquire = { version = "0.7.0", features = ["date"], optional = true }
regex = { version = "1.7", optional = true }
reqwest = { version = "0.11.16", optional = true, features = ["rustls-tls-native-roots"] }
semver = { version = "1.0.17", optional = true }
shell-escape = { version = "0.1.5", optional = true }
strum = "0.27"
strum_macros = "0.27"
sysinfo = { version = "0.36.1", optional = true }
tokio = { version = "1.28.0", optional = true }
typetag = { version = "0.2", optional = true }
url = { version = "2.3.1", optional = true }
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.145"
indexmap = { version = "2.11.4", features = ["serde"] }
ratatui = { version = "0.29.0", optional = true }
crossterm = { version = "0.29.0", optional = true }
better-panic = { version = "0.3.0", optional = true }
thiserror = "1.0.58"

[target.'cfg(unix)'.dependencies]
gpgme = "0.11"

[build-dependencies]
chrono = "0.4.33"
clap = { version = "4.1.8", features = ["derive"] }
clap_mangen = "0.2.9"
clap_complete = "4.5.1"

[profile.release]
lto = true