[package]
name = "envio"
version = "0.6.1"
rust-version = "1.90.0"
edition = "2024"
description = "A Modern And Secure CLI Tool For Managing Environment Variables"
authors = ["Humble Penguin <humblepenguinn@gmail.com>"]
repository = "https://github.com/humblepenguinn/envio/"
license = "MIT/Apache-2.0"
readme = "README.md"
build = "build/build.rs"

[features]
# disable the application feature when using envio as a library
default = ["application"]
application = [
    "better-panic",
    "clap",
    "colored",
    "comfy-table",
    "dirs",
    "git-version",
    "indicatif",
    "inquire",
    "ratatui",
    "regex",
    "semver",
    "shell-escape",
    "sysinfo",
    "tokio",
    "typetag",
    "url",
    "reqwest",
]

[lib]
name = "envio"
path = "src/lib.rs"
doctest = false

[dependencies]
age = "0.11.1"
bincode = {version = "2.0.1", features = ["serde"]}
better-panic = { version = "0.3.0", optional = true }
chrono = { version = "0.4.42", features = ["serde"] }
clap = { version = "4.5.53", features = ["derive"], optional = true }
colored = { version = "3.0.0", optional = true }
comfy-table = { version = "7.2.1", optional = true }
crossterm = { version = "0.29.0", optional = true }
dirs = { version = "6.0.0", optional = true }
dyn-clone = "1.0.20"
git-version = { version = "0.3.9", optional = true }
indicatif = { version = "0.18.3", optional = true }
indexmap = { version = "2.11.4", features = ["serde"] }
inquire = { version = "0.9.1", features = ["date"], optional = true }
regex = { version = "1.7", optional = true }
ratatui = { version = "0.29.0", optional = true }
reqwest = { version = "0.12.24", optional = true, features = ["rustls-tls-native-roots", "json"] }
semver = { version = "1.0.17", optional = true }
shell-escape = { version = "0.1.5", optional = true }
strum = "0.27"
strum_macros = "0.27"
sysinfo = { version = "0.37.2", optional = true }
thiserror = "2.0.17"
tokio = { version = "1.28.0", optional = true }
typetag = { version = "0.2", optional = true }
url = { version = "2.3.1", optional = true }
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.145"

[target.'cfg(unix)'.dependencies]
gpgme = "0.11.0"

[build-dependencies]
chrono = "0.4.42"
clap = { version = "4.5.53", features = ["derive"] }
clap_mangen = "0.2.31"
clap_complete = "4.5.61"

[profile.release]
lto = true